noinst_LIBRARIES=libconcentratorexpress.a

libconcentratorexpress_a_SOURCES=exp_aggregator.c exp_aggregator.h exp_crc16.c exp_crc16.h exp_hashing.c exp_hashing.h exp_ipfix.c exp_ipfix.h \
exp_ipfixReceiver.c exp_ipfixReceiver.h exp_printIpfix.c exp_printIpfix.h exp_rcvIpfix.c exp_rcvIpfix.h exp_rules.c exp_rules.h \
exp_sampler_hook_entry.c exp_sampler_hook_entry.h exp_sndIpfix.c exp_sndIpfix.h exp_templateBuffer.c exp_templateBuffer.h

AM_CFLAGS=-I$(top_srcdir) -Wall
