ADD_EXECUTABLE(example_code_2
	example_code_2
)

TARGET_LINK_LIBRARIES(example_code_2
	ipfixlolib
	common
	dl
)

SET_TARGET_PROPERTIES(example_code_2
	PROPERTIES
	LINKER_LANGUAGE CXX)

IF (SUPPORT_DTLS)
	TARGET_LINK_LIBRARIES(example_code_2 ${OPENSSL_LIBRARIES})
	IF (CRYPTO_FOUND)
		TARGET_LINK_LIBRARIES(example_code_2 ${CRYPTO_LIBRARIES})
	ENDIF (CRYPTO_FOUND)
ENDIF (SUPPORT_DTLS)
