ADD_EXECUTABLE(test_everything
	test_everything.cc
)

TARGET_LINK_LIBRARIES(test_everything
	ipfixlolib
	common
)

IF (WITH_OPENSSL)
	TARGET_LINK_LIBRARIES(test_everything ${OPENSSL_LIBRARIES})
	IF (CRYPTO_FOUND)
		TARGET_LINK_LIBRARIES(test_everything ${CRYPTO_LIBRARIES})
	ENDIF (CRYPTO_FOUND)
ENDIF (WITH_OPENSSL)
